--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </div>
     </div>
   </form>
-  <p>-created by Alok</p>
+  <p>-created by Abhishek</p>
 </div>
 <script src="index.js"></script>
 </body>
